# textqltakehome

TextQL_TakeHome/: README.md  cabal.project
TextQL_TakeHome/backend/: db.db  package.yaml  textql-backend.cabal
TextQL_TakeHome/backend/app/: Main.hs
TextQL_TakeHome/backend/data/: sample.json
TextQL_TakeHome/backend/src/: Env.hs  MyQuery.hs
TextQL_TakeHome/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
TextQL_TakeHome/frontend/: package-lock.json
TextQL_TakeHome/frontend/src/routes/: +page.svelte
