cabal-version:      3.0
name:               textql-backend
version:            0.1.0.0
description:        Backend for TextQL Takehome
author:             Bryn Kerslake
maintainer:         brynkerslake@gmail.com
build-type:         Simple

executable textql-server
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:    Env, MyQuery
  default-language: Haskell2010

  build-depends:
      base                      >=4.11 && <5
    , aeson                     >=2
    , bytestring
    , containers
    , scientific
    , text
    , time
    , vector
    , transformers
    , mtl
    , megaparsec               >=9
    , parser-combinators
    , network
    , wai
    , wai-cors
    , scotty
    , sqlite-simple
